src/tests/PropDrilling/valid/case#4/index.jsx
import React from 'react';
import ChildComponent from './ChildComponent'; // Certifique-se de importar o componente ChildComponent corretamente

const Component = ({ propDrilling }) => {
    return <h4 prop={propDrilling} prop2={propDrilling} />;
};

export default Component;
